--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,8 +21,8 @@
       <td><%= link_to 'Destroy', article_path(article),
                                  method: :delete,
                                  data: { confirm: 'Are you sure?' },
-                                 class: 'dangerous' %></td>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
+                                 class: 'btn btn-danger' %></td>
+      <td><%= link_to 'Edit', edit_article_path(article), class: 'btn btn-primary %></td>
     </tr>
   <% end %>
 </table>
