--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -22,7 +22,7 @@
                                  method: :delete,
                                  data: { confirm: 'Are you sure?' },
                                  class: 'btn btn-danger' %></td>
-      <td><%= link_to 'Edit', edit_article_path(article), class: 'btn btn-primary %></td>
+      <td><%= link_to 'Edit', edit_article_path(article), class: 'btn btn-primary' %> </td>
     </tr>
   <% end %>
 </table>
