--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,4 @@
-a {
+/*a {
 	text-decoration: none;
 	color: #15D318;
 }
@@ -11,4 +11,4 @@ a.distraction {
 	color: yellow
 }
 
-body{ background: #bcc5d6 }
+body{ background: #bcc5d6 }*/
