--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,11 @@
 <%= link_to 'Back', articles_path %>
 
 <p>
+
+  <%= image_tag @article.image.url, height: '150px', width:'250px' %>
+</p> 
+
+<p>
   <strong>Title:</strong>
   <%= @article.title %>
 </p>
@@ -14,11 +19,21 @@
 
 <p>
   <strong>Author:</strong>
-  <%= @article.user.email %>
+  <%= @article.user.try(:email) %>
 
 </p>
+<p>
+  <strong>Likes: </strong>
+  <%= @article.likes.count %>
+
+</p>
+
+    <% if @user_like.nil? %>
+		<%= link_to 'LIKE', add_like_article_path(@article), method: :post %>
+
 
 <h2>Comments</h2>
 <%= render @article.comments.order(created_at: :desc) %>
 
 <%= render 'comments/form' %>
+<% end -%>
